--- a/yuyue.cfg
+++ b/yuyue.cfg
@@ -3,7 +3,7 @@
 loginuserName = "15921615178"
 loginuserPassword = "87994566"
 # 医生
-doctorname = u"赵琳"
+doctorname = 赵琳
 hospitalname = u"医院：新华医院"
 appointment_weekday = u"星期三"
 appointment_date = u"06-08"
